--- a/app/src/main/res/layout/activity_propriedade.xml
+++ b/app/src/main/res/layout/activity_propriedade.xml
@@ -20,7 +20,7 @@
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView24"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toT9opOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -44,14 +44,14 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView30" />
+            app:layout_constraintTop_toBottomOf="@id/imageView30" />
 
         <ImageView
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView31"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView98"
+            app:layout_constraintTop_toBottomOf="@id/textView98"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -65,7 +65,7 @@
             android:id="@+id/switchConstrucoes"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView31"
+            app:layout_constraintTop_toBottomOf="@id/imageView31"
             android:textOn="Sim"
             android:textOff="Não"
             android:layout_width="wrap_content"
@@ -85,7 +85,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/switchConstrucoes"
+            app:layout_constraintTop_toBottomOf="@id/switchConstrucoes"
             android:hint="Construções"
             android:textSize="16sp"
             android:minLines="1"
@@ -99,7 +99,7 @@
             android:id="@+id/switchEquipamentos"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/benfConstucoesText"
+            app:layout_constraintTop_toBottomOf="@id/benfConstucoesText"
             android:textOn="Sim"
             android:textOff="Não"
             android:layout_width="wrap_content"
@@ -119,7 +119,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/switchEquipamentos"
+            app:layout_constraintTop_toBottomOf="@id/switchEquipamentos"
             android:hint="Equipamentos"
             android:textSize="16sp"
             android:minLines="1"
@@ -133,7 +133,7 @@
             android:id="@+id/switchCroquis"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/benfEquipamentosText"
+            app:layout_constraintTop_toBottomOf="@id/benfEquipamentosText"
             android:textOn="Sim"
             android:textOff="Não"
             android:layout_width="wrap_content"
@@ -153,7 +153,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/switchCroquis"
+            app:layout_constraintTop_toBottomOf="@id/switchCroquis"
             android:hint="Quantidade"
             android:textSize="16sp"
             android:minLines="1"
@@ -169,7 +169,7 @@
             android:id="@+id/benfFotosButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/benfCroquisText"
+            app:layout_constraintTop_toBottomOf="@id/benfCroquisText"
             android:layout_marginTop="4dp"
             android:enabled="false"
             />
@@ -179,7 +179,7 @@
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView32"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/benfFotosButton"
+            app:layout_constraintTop_toBottomOf="@id/benfFotosButton"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -203,14 +203,14 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView32" />
+            app:layout_constraintTop_toBottomOf="@id/imageView32" />
 
         <ImageView
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView33"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView99"
+            app:layout_constraintTop_toBottomOf="@id/textView99"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -227,7 +227,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView33"
+            app:layout_constraintTop_toBottomOf="@id/imageView33"
             android:layout_marginTop="18dp"
             android:textSize="18sp"
             />
@@ -235,11 +235,11 @@
         <Spinner
             android:id="@+id/spinnerPlantacao"
             android:layout_marginStart="24dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView100"
+            app:layout_constraintLeft_toRightOf="@id/textView100"
             android:layout_marginLeft="24dp"
             android:layout_width="0dp"
             android:layout_height="38dp"
-            app:layout_constraintTop_toTopOf="@+id/textView100"
+            app:layout_constraintTop_toTopOf="@id/textView100"
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
@@ -253,7 +253,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView100"
+            app:layout_constraintTop_toBottomOf="@id/textView100"
             android:layout_marginTop="22dp"
             android:textSize="18sp" />
 
@@ -262,12 +262,12 @@
             android:inputType="textPersonName"
             android:id="@+id/tipoPlantacaoText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView101"
+            app:layout_constraintLeft_toRightOf="@id/textView101"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView101"
+            app:layout_constraintTop_toTopOf="@id/textView101"
             android:hint="Tipo"
             android:textSize="16sp"
             android:minLines="1"
@@ -282,7 +282,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView101"
+            app:layout_constraintTop_toBottomOf="@id/textView101"
             android:layout_marginTop="22dp"
             android:textSize="18sp" />
 
@@ -291,12 +291,12 @@
             android:inputType="textPersonName"
             android:id="@+id/idadePlantacaoText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView102"
+            app:layout_constraintLeft_toRightOf="@id/textView102"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView102"
+            app:layout_constraintTop_toTopOf="@id/textView102"
             android:hint="Idade"
             android:textSize="16sp"
             android:minLines="1"
@@ -311,7 +311,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView102"
+            app:layout_constraintTop_toBottomOf="@id/textView102"
             android:layout_marginTop="22dp"
             android:textSize="18sp" />
 
@@ -320,12 +320,12 @@
             android:inputType="textPersonName"
             android:id="@+id/complPlantacaoText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView103"
+            app:layout_constraintLeft_toRightOf="@id/textView103"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView103"
+            app:layout_constraintTop_toTopOf="@id/textView103"
             android:hint="Complemento"
             android:textSize="16sp"
             android:minLines="1"
@@ -339,7 +339,7 @@
             android:id="@+id/savePlantacaoButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView103"
+            app:layout_constraintTop_toBottomOf="@id/textView103"
             android:layout_marginTop="8dp"
             />
 
@@ -351,7 +351,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/savePlantacaoButton"
+            app:layout_constraintTop_toBottomOf="@id/savePlantacaoButton"
             android:layout_marginTop="22dp"
             android:textSize="18sp" />
 
@@ -365,7 +365,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView104"
+            app:layout_constraintTop_toBottomOf="@id/textView104"
             android:textSize="16sp"
             android:lines="5"
             android:minLines="1"
@@ -378,7 +378,7 @@
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView41"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/obsInfoPropText"
+            app:layout_constraintTop_toBottomOf="@id/obsInfoPropText"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -394,7 +394,7 @@
             android:id="@+id/saveInfoPropButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView41"/>
+            app:layout_constraintTop_toBottomOf="@id/imageView41"/>
 
 
 
