--- a/app/src/main/res/layout/activity_relatorio.xml
+++ b/app/src/main/res/layout/activity_relatorio.xml
@@ -44,14 +44,14 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView34" />
+            app:layout_constraintTop_toBottomOf="@id/imageView34" />
 
         <ImageView
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView35"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView105"
+            app:layout_constraintTop_toBottomOf="@id/textView105"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -68,7 +68,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView35"
+            app:layout_constraintTop_toTopOf="@id/imageView35"
             android:layout_marginTop="18dp"
             android:textSize="18sp"
             />
@@ -78,12 +78,12 @@
             android:inputType="date"
             android:id="@+id/dataRelatorioText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView106"
+            app:layout_constraintLeft_toRightOf="@id/textView106"
             android:layout_marginLeft="8dp"
             app:layout_constraintRight_toLeftOf="@+id/dataRelatorioButton"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView106"
+            app:layout_constraintTop_toTopOf="@id/textView106"
             android:hint="01/01/1900"
             android:textAlignment="center"
             android:minLines="1"
@@ -100,7 +100,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView106"
+            app:layout_constraintTop_toTopOf="@id/textView106"
             />
 
         <TextView
@@ -111,7 +111,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView106"
+            app:layout_constraintTop_toBottomOf="@id/textView106"
             android:layout_marginTop="22dp"
             android:textSize="18sp" />
 
@@ -120,12 +120,12 @@
             android:inputType="time"
             android:id="@+id/horarioChegadaRelatorioText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView107"
+            app:layout_constraintLeft_toRightOf="@id/textView107"
             android:layout_marginLeft="8dp"
             app:layout_constraintRight_toLeftOf="@+id/horarioChegadaRelatorioButton"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView107"
+            app:layout_constraintTop_toTopOf="@id/textView107"
             android:hint="00:00"
             android:textAlignment="center"
             android:minLines="1"
@@ -142,7 +142,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView107"/>
+            app:layout_constraintTop_toTopOf="@id/textView107"/>
 
         <TextView
             android:text="Horário de saída:"
@@ -152,7 +152,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView107"
+            app:layout_constraintTop_toBottomOf="@id/textView107"
             android:layout_marginTop="22dp"
             android:textSize="18sp"
             />
@@ -162,12 +162,12 @@
             android:inputType="time"
             android:id="@+id/horarioSaidaRelatorioText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView108"
+            app:layout_constraintLeft_toRightOf="@id/textView108"
             android:layout_marginLeft="8dp"
             app:layout_constraintRight_toLeftOf="@+id/horarioSaidaRelatorioButton"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView108"
+            app:layout_constraintTop_toTopOf="@id/textView108"
             android:hint="00:00"
             android:textAlignment="center"
             android:minLines="1"
@@ -184,7 +184,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView108" />
+            app:layout_constraintTop_toTopOf="@id/textView108" />
 
         <EditText
             android:layout_width="0dp"
@@ -196,7 +196,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView108"
+            app:layout_constraintTop_toBottomOf="@id/textView108"
             android:textSize="16sp"
             android:lines="5"
             android:minLines="1"
@@ -214,7 +214,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/descricaoRelatorioText"
+            app:layout_constraintTop_toBottomOf="@id/descricaoRelatorioText"
             android:layout_marginTop="22dp"
             android:textSize="18sp"
             />
@@ -224,12 +224,12 @@
             android:inputType="textPersonName"
             android:id="@+id/responsavelRelatorioText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView109"
+            app:layout_constraintLeft_toRightOf="@id/textView109"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView109"
+            app:layout_constraintTop_toTopOf="@id/textView109"
             android:hint="Responsável"
             android:textSize="16sp"
             android:minLines="1"
@@ -241,7 +241,7 @@
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView36"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView109"
+            app:layout_constraintTop_toBottomOf="@id/textView109"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -265,14 +265,14 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView36" />
+            app:layout_constraintTop_toBottomOf="@id/imageView36" />
 
         <ImageView
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView37"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView110"
+            app:layout_constraintTop_toBottomOf="@id/textView110"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -289,7 +289,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView37"
+            app:layout_constraintTop_toTopOf="@id/imageView37"
             android:layout_marginTop="18dp"
             android:textSize="18sp"
             />
@@ -299,12 +299,12 @@
             android:inputType="date"
             android:id="@+id/data2RelatorioText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView106"
+            app:layout_constraintLeft_toRightOf="@id/textView106"
             android:layout_marginLeft="8dp"
             app:layout_constraintRight_toLeftOf="@+id/data2RelatorioButton"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView111"
+            app:layout_constraintTop_toTopOf="@id/textView111"
             android:hint="01/01/1900"
             android:textAlignment="center"
             android:minLines="1"
@@ -321,7 +321,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView111"
+            app:layout_constraintTop_toTopOf="@id/textView111"
             />
 
         <TextView
@@ -332,7 +332,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView111"
+            app:layout_constraintTop_toBottomOf="@id/textView111"
             android:layout_marginTop="22dp"
             android:textSize="18sp" />
 
@@ -341,12 +341,12 @@
             android:inputType="time"
             android:id="@+id/horario2RelatorioText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView107"
+            app:layout_constraintLeft_toRightOf="@id/textView107"
             android:layout_marginLeft="8dp"
             app:layout_constraintRight_toLeftOf="@+id/horario2RelatorioButton"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView112"
+            app:layout_constraintTop_toTopOf="@id/textView112"
             android:hint="00:00"
             android:textAlignment="center"
             android:minLines="1"
@@ -363,7 +363,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView112"/>
+            app:layout_constraintTop_toTopOf="@id/textView112"/>
 
         <EditText
             android:layout_width="0dp"
@@ -375,7 +375,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView112"
+            app:layout_constraintTop_toBottomOf="@id/textView112"
             android:textSize="16sp"
             android:lines="5"
             android:minLines="1"
@@ -390,7 +390,7 @@
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView38"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/descricao2RelatorioText"
+            app:layout_constraintTop_toBottomOf="@id/descricao2RelatorioText"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -414,14 +414,14 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageView38" />
+            app:layout_constraintTop_toBottomOf="@id/imageView38" />
 
         <ImageView
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView39"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView113"
+            app:layout_constraintTop_toBottomOf="@id/textView113"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -438,7 +438,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="@+id/imageView39"
+            app:layout_constraintTop_toTopOf="@id/imageView39"
             android:layout_marginTop="18dp"
             android:textSize="18sp"
             />
@@ -448,12 +448,12 @@
             android:inputType="date"
             android:id="@+id/data3RelatorioText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView114"
+            app:layout_constraintLeft_toRightOf="@id/textView114"
             android:layout_marginLeft="8dp"
             app:layout_constraintRight_toLeftOf="@+id/data3RelatorioButton"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView114"
+            app:layout_constraintTop_toTopOf="@id/textView114"
             android:hint="01/01/1900"
             android:textAlignment="center"
             android:minLines="1"
@@ -470,7 +470,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView114"
+            app:layout_constraintTop_toTopOf="@id/textView114"
             />
 
         <TextView
@@ -481,7 +481,7 @@
             android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView114"
+            app:layout_constraintTop_toBottomOf="@id/textView114"
             android:layout_marginTop="22dp"
             android:textSize="18sp" />
 
@@ -490,12 +490,12 @@
             android:inputType="time"
             android:id="@+id/horario3RelatorioText"
             android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toRightOf="@+id/textView115"
+            app:layout_constraintLeft_toRightOf="@id/textView115"
             android:layout_marginLeft="8dp"
             app:layout_constraintRight_toLeftOf="@+id/horario3RelatorioButton"
             android:layout_marginRight="8dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView115"
+            app:layout_constraintTop_toTopOf="@id/textView115"
             android:hint="00:00"
             android:textAlignment="center"
             android:minLines="1"
@@ -512,7 +512,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@+id/textView115"/>
+            app:layout_constraintTop_toTopOf="@id/textView115"/>
 
         <EditText
             android:layout_width="0dp"
@@ -524,7 +524,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView115"
+            app:layout_constraintTop_toBottomOf="@id/textView115"
             android:textSize="16sp"
             android:lines="5"
             android:minLines="1"
@@ -539,7 +539,7 @@
             app:srcCompat="@drawable/bar"
             android:id="@+id/imageView40"
             android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/descricao3RelatorioText"
+            app:layout_constraintTop_toBottomOf="@id/descricao3RelatorioText"
             android:layout_width="wrap_content"
             android:layout_marginEnd="16dp"
             app:layout_constraintRight_toRightOf="parent"
@@ -555,7 +555,7 @@
             android:id="@+id/saveRelatorioButton"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView40"/>
+            app:layout_constraintTop_toBottomOf="@id/imageView40"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
