--- a/app/src/main/res/layout/activity_add_new_register.xml
+++ b/app/src/main/res/layout/activity_add_new_register.xml
@@ -71,14 +71,16 @@
             android:id="@+id/buttonJuridico"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="199dp"
+            android:layout_marginTop="8dp"
             android:enabled="false"
             android:text="Informações Empresa"
             android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/buttonPropriedade"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView61"
-            app:layout_constraintHorizontal_bias="0.0" />
+            app:layout_constraintTop_toTopOf="@+id/imageView61"
+            app:layout_constraintVertical_bias="1.0"
+            android:layout_marginBottom="8dp" />
 
         <Button
             android:id="@+id/buttonPropriedade"
