--- a/app/src/main/res/layout/activity_info_prop.xml
+++ b/app/src/main/res/layout/activity_info_prop.xml
@@ -708,7 +708,24 @@
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/switchCroquis" />
+            app:layout_constraintTop_toBottomOf="@id/switchCroquis"
+            android:layout_marginTop="-60dp"
+            app:layout_constraintHorizontal_bias="0.0" />
+
+        <Switch
+            android:id="@+id/switchPlantacoes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:showText="true"
+            android:text="Possui plantações: "
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            android:textOff="Não"
+            android:textOn="Sim"
+            android:textSize="18sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/benfCroquisText" />
 
         <ImageView
             android:id="@+id/imageView32"
@@ -721,7 +738,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/benfCroquisText"
+            app:layout_constraintTop_toBottomOf="@id/switchPlantacoes"
             app:srcCompat="@drawable/bar" />
 
         <TextView
