--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -181,4 +181,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/floatingMapa"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="-34dp"
+            android:layout_marginLeft="38dp"
+            android:layout_marginRight="2dp"
+            android:clickable="true"
+            app:fabSize="mini"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.363"
+            app:layout_constraintLeft_toRightOf="@+id/sendButton"
+            app:layout_constraintRight_toRightOf="parent"
+            app:srcCompat="@android:drawable/ic_dialog_map" />
+
 </android.support.constraint.ConstraintLayout>
