--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -183,11 +183,11 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floatingMapa"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="-34dp"
-            android:layout_marginLeft="38dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginLeft="34dp"
+            android:layout_marginRight="6dp"
             android:clickable="true"
             app:backgroundTint="@color/colorPrimary"
             app:fabSize="mini"
